# Health-data

./: .env.example  .gitignore  README.md  dagster.yaml  data.py  pyproject.toml
.dg/: telemetry.yaml
features/planned/: 02-xml-parser.md  03-raw-assets.md  04-duckdb-resource.md  05-metrics-layer.md  06-daily-mart.md  07-definitions-wiring.md  08-tests.md
health_etl/: definitions.py
health_etl/assets/mart/: daily_summary.py
health_etl/assets/metrics/: fitness_metrics.py  hrv_baseline.py  rhr_baseline.py  sleep_metrics.py  training_load.py  vitals_nightly.py
health_etl/assets/raw/: fitness.py  heart_rate.py  parser.py  sleep.py  vitals.py  workouts.py
health_etl/resources/: duckdb_resource.py
src/Health_data/defs/assets/: raw.py
tests/: conftest.py
tests/test_metrics/: test_sleep_metrics.py
