[project]
name = "Health_data"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.13.6",
    "marimo>=0.23.8",
    "pandas>=2.3.3",
    "polars>=1.41.0",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "dagster-dg-cli",
    "dagster-webserver",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "Health_data"
registry_modules = [
    "Health_data.components.*",
]


